--- a/project_1/processor/pipeline.qsf
+++ b/project_1/processor/pipeline.qsf
@@ -84,4 +84,24 @@ set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name QIP_FILE rom2.qip
+set_global_assignment -name QIP_FILE ram2.qip
+set_global_assignment -name QIP_FILE ram3.qip
+set_global_assignment -name QIP_FILE ram4.qip
+set_global_assignment -name SYSTEMVERILOG_FILE extend_mem.sv
+set_location_assignment PIN_V11 -to clkFPGA
+set_location_assignment PIN_AH16 -to rst
+set_location_assignment PIN_W20 -to R13_flag
+set_location_assignment PIN_W15 -to R13_flag_out
+set_location_assignment PIN_AC24 -to R14_flag
+set_location_assignment PIN_AD26 -to R6_audio[10]
+set_location_assignment PIN_AF28 -to R6_audio[9]
+set_location_assignment PIN_AF27 -to R6_audio[8]
+set_location_assignment PIN_AH27 -to R6_audio[7]
+set_location_assignment PIN_AH26 -to R6_audio[6]
+set_location_assignment PIN_AF25 -to R6_audio[5]
+set_location_assignment PIN_AF23 -to R6_audio[4]
+set_location_assignment PIN_AH22 -to R6_audio[3]
+set_location_assignment PIN_AG21 -to R6_audio[2]
+set_location_assignment PIN_AA20 -to R6_audio[1]
+set_location_assignment PIN_AE22 -to R6_audio[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
