--- a/project_1/processor/pipeline.qsf
+++ b/project_1/processor/pipeline.qsf
@@ -89,7 +89,7 @@ set_global_assignment -name QIP_FILE ram3.qip
 set_global_assignment -name QIP_FILE ram4.qip
 set_global_assignment -name SYSTEMVERILOG_FILE extend_mem.sv
 set_location_assignment PIN_V11 -to clkFPGA
-set_location_assignment PIN_AH17 -to rst
+set_location_assignment PIN_Y24 -to rst
 set_location_assignment PIN_W20 -to R13_flag
 set_location_assignment PIN_W15 -to R13_flag_out
 set_location_assignment PIN_AC24 -to R14_flag
@@ -105,4 +105,6 @@ set_location_assignment PIN_AG21 -to R6_audio[2]
 set_location_assignment PIN_AA20 -to R6_audio[1]
 set_location_assignment PIN_AE22 -to R6_audio[0]
 set_global_assignment -name QIP_FILE ram257.qip
+set_global_assignment -name SYSTEMVERILOG_FILE compare.sv
+set_location_assignment PIN_V16 -to finish
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
