--- a/project_1/processor/pipeline.qsf
+++ b/project_1/processor/pipeline.qsf
@@ -75,11 +75,10 @@ set_global_assignment -name QIP_FILE rom.qip
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH alu_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH datapath_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME datapath_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id datapath_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME datapath_tb -section_id datapath_tb
-set_global_assignment -name QIP_FILE rom2.qip
 set_global_assignment -name SYSTEMVERILOG_FILE adder_tb.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME adder_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id adder_tb
@@ -113,3 +112,13 @@ set_global_assignment -name QIP_FILE ram257.qip
 set_global_assignment -name SYSTEMVERILOG_FILE compare.sv
 set_location_assignment PIN_V16 -to finish
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE extend_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME extend_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id extend_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME extend_tb -section_id extend_tb
+set_global_assignment -name SYSTEMVERILOG_FILE regfile_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_FILE extend_tb.sv -section_id extend_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME regfile_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id regfile_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME regfile_tb -section_id regfile_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE regfile_tb.sv -section_id regfile_tb
