--- a/project_1/pipeline/pipeline.qsf
+++ b/project_1/pipeline/pipeline.qsf
@@ -107,4 +107,8 @@ set_location_assignment PIN_AE22 -to R6_audio[0]
 set_global_assignment -name QIP_FILE ram257.qip
 set_global_assignment -name SYSTEMVERILOG_FILE compare.sv
 set_location_assignment PIN_V16 -to finish
+set_global_assignment -name SYSTEMVERILOG_FILE adder_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE alu_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE extend_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE regfile_tb.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
